--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,23 +4,17 @@ spring.application.name=LDAPAuthService
 # Allow circular references (can be useful in certain configurations)
 spring.main.allow-circular-references=true
 
-# Remove embedded LDAP server configuration, as we're using a real LDAP server
-# spring.ldap.embedded.ldif=classpath:test-server.ldif  # No longer needed
-# spring.ldap.embedded.base-dn=dc=springframework,dc=org  # No longer needed
-# spring.ldap.embedded.port=8389  # No longer needed
+# LDAP server URL
+spring.ldap.urls=ldap://ehintad-001.nsdev.local:389
 
-# Connection settings for the real LDAP server
-# Replace 'localhost:389' with your LDAP server’s address and port
-spring.ldap.urls=ldap://your-ldap-server:389
+# Base DN for LDAP entries
+spring.ldap.base=DC=NSDev,DC=local
 
-# Root entry (base DN for LDAP)
-# Make sure this is the correct base DN for your LDAP server
-spring.ldap.base=dc=springframework,dc=org
+# Manager credentials for LDAP binding
+spring.ldap.username=CN=configmgnr,OU=Service-Accounts,DC=NSDev,DC=local
+spring.ldap.password=G;LBUr=EtS7D@7k0iUl8
 
-# Bind DN and credentials for the LDAP server (useful for LDAP authentication)
-# Replace with your actual Bind DN and password for connecting to the LDAP server
-spring.ldap.username=uid=testuser,ou=people,dc=springframework,dc=org
-spring.ldap.password=password
+# User DN pattern and group search base
+spring.ldap.user-dn-pattern=CN={0},OU=User_Test,DC=NSDev,DC=local
+spring.ldap.group-search-base=OU=User_Test,DC=NSDev,DC=local
 
-# Additional LDAP configuration
-spring.ldap.search-base=ou=people,dc=springframework,dc=org
